Server CORS active + App API Logic + CSS Styles

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,10 +1,12 @@
 $primary: #3f37c9;
-$primary-low:#f0f1f5;
-$primary-low2:#4cc9f0;
+$primary-low:#4cc9f0;
 
 $secondary: #b5179e;
 $secondary-low: #f72585;
 
-$tertiary: #fcbf49;
+$tertiary: #f5ac0e;
+$tertiary-low: #fcbf49;
+
+$white-styled:#f0f1f5;
 $dark-gray: #333;
 $black-styled:#0a0a0a;
