--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,7 @@
 	margin: 0px;
 	padding: 0px;
 	overflow-x: hidden;
-	background-color: $primary;
+	background-color: $white-styled;
 }
 html,
 body {
