--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,7 @@
 @import './base/settings';
 @import './base/base';
 @import './components/statics';
+@import './components/dashboard';
+@import './components/ev-programmer';
+@import './components/control-sidebar';
+@import './components/camera';
