--- a/src/styles/components/_control-sidebar.scss
+++ b/src/styles/components/_control-sidebar.scss
@@ -10,6 +10,7 @@
     border: 2px solid $black-styled;
     margin-top: 2rem;
     background-color: $primary;
+    box-shadow: -2px -2px 5px $white-styled inset;
     color: $black-styled;
     padding: 1rem;
     border-radius: 16px;
