--- a/src/styles/components/_statics.scss
+++ b/src/styles/components/_statics.scss
@@ -7,7 +7,7 @@
     font-size: 3ch;
     text-align: center;
     text-shadow: 0px 0px 35px $primary-low;
-    box-shadow: 0px 0px 10px $black-styled;
+    box-shadow: 0px -2px 5px $white-styled inset;
     height: 10vh;
 
 }
