--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -33,18 +33,18 @@ main {
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background: $primary-low;
+	background: #848486;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: darken($color: $secondary, $amount: 20);
+	background: darken($color: $primary, $amount: 20);
 	transition: all 300ms;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: $secondary;
+	background: $primary;
 }
 
 
