--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -6,8 +6,9 @@
       'menu nothing nothing right right right'
       'menu footer footer footer footer footer';
     grid-gap: 10px;
-    background-color: $dark-gray;
     padding: 1px;
+    background: rgb(51,51,51);
+    background: linear-gradient(67deg, rgba(51,51,51,1) 53%, rgba(140,140,140,1) 100%);
 
 }
 .dashboard__sidebar{
@@ -25,16 +26,18 @@
     text-align: center;
     background-color: $primary;
     grid-area: main;
-    border-radius: 16px;
-    height: 10vh;
-    width: 15vw;
+    border-radius: 50%;
+    height: 20vh;
+    width: 10vw;
     margin: 2rem;
     padding: 1rem;
     border: 2px solid $black-styled;
     cursor: pointer;
     transition: all 400ms;
+    box-shadow: -2px -2px 5px $black-styled inset;
+    
     &:hover{
-        box-shadow: 0px 0px 5px $primary-low inset;
+        box-shadow: -2px -2px 5px $white-styled inset;
     }
 }
 .dashboard__programmer{
@@ -53,4 +56,6 @@
     margin-top: -10vh;
     margin-left: 5rem;
     border: 2px solid $black-styled;
+    box-shadow: 2px 2px 5px $black-styled;
+
 }
