Cambio completo de estilos prototipo2 (falta responsive)

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,11 +1,11 @@
-$primary: #3f37c9;
-$primary-low:#4cc9f0;
+$primary: #03045e;
+$primary-low:#023e8a;
 
-$secondary: #b5179e;
-$secondary-low: #f72585;
+$secondary: #0077b6;
+$secondary-low: #00b4d8;
 
-$tertiary: #f5ac0e;
-$tertiary-low: #fcbf49;
+$tertiary: #48cae4;
+$tertiary-low: #90e0ef;
 
 $white-styled:#f0f1f5;
 $dark-gray: #333;
