--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,5 +3,5 @@
 @import './components/statics';
 @import './components/dashboard';
 @import './components/ev-programmer';
-@import './components/control-sidebar';
+@import './components/control';
 @import './components/camera';
