--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,6 @@
 	margin: 0px;
 	padding: 0px;
 	overflow-x: hidden;
-	background-color: $white-styled;
 }
 html,
 body {
@@ -16,9 +15,12 @@ main {
 	width: 100%;
 }
 .active {
-	border: transparent $secondary-low;
-	border-radius: 50%;
-	box-shadow: 0px 0px 20px violet;
+	color: green;
+	text-shadow: 0px 0px 2px green;
+}
+.inactive {
+	color: red;
+	text-shadow: 0px 0px 3px red;
 }
 
 //SCROLLBAR
