--- a/src/styles/components/_statics.scss
+++ b/src/styles/components/_statics.scss
@@ -1,21 +1,15 @@
 .static__title{
     display: flex;
     justify-content: center;
-    background-color: $primary;
-    color: $white-styled;
+    align-items: center;
+    color: $black-styled;
     font-weight: bold;
-    font-size: 3ch;
     text-align: center;
-    text-shadow: 0px 0px 35px $primary-low;
-    box-shadow: 0px -2px 5px $white-styled inset;
-    height: 10vh;
+    text-shadow: 4px -8px 10px $dark-gray;
+    font-size: 7ch;
+    padding: 1rem;
+    
+
 
 }
-.static__switch-container{
-    background-color: $primary;
-    cursor: pointer;
-    h1{
-        background-color: $primary;
-        color: $white-styled;
-    }
-}
+
