Main Screen Responsive

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,6 +9,8 @@ body {
 	height: 100vh;
 	width: 100vw;
 	scroll-behavior: smooth; //Volver smooth al top cuando scrolleamos
+	background-image: url(../../assets/img/silver-metallic-textured-background.jpg);
+	background-repeat: repeat-y;
 }
 
 main {
