--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,12 +1,7 @@
-$primary: #03045e;
-$primary-low:#023e8a;
-
+$primary: #33be9f;
 $secondary: #0077b6;
-$secondary-low: #00b4d8;
-
-$tertiary: #48cae4;
-$tertiary-low: #90e0ef;
 
 $white-styled:#f0f1f5;
 $dark-gray: #333;
+$black-gentle: #1b1f2a;
 $black-styled:#0a0a0a;
