--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,16 +9,15 @@ body {
 	height: 100vh;
 	width: 100vw;
 	scroll-behavior: smooth; //Volver smooth al top cuando scrolleamos
-	background-image: url(../../assets/img/silver-metallic-textured-background.jpg);
-	background-repeat: repeat-y;
+	background-color:$black-gentle;
 }
 
 main {
 	width: 100%;
 }
 .active {
-	color: green;
-	text-shadow: 0px 0px 2px green;
+	color: greenyellow;
+	text-shadow: 0px 0px 3px greenyellow;
 }
 .inactive {
 	color: red;
@@ -42,13 +41,13 @@ main {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: darken($color: $primary, $amount: 20);
+	background: darken($color: $secondary, $amount: 20);
 	transition: all 300ms;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: $primary;
+	background: $secondary;
 }
 
 
