--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -5,8 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(../../assets/img/silver-metallic-textured-background.jpg);
-    background-repeat: repeat-y;
+
 }
 
 .dashboard__valves{
@@ -24,38 +23,24 @@
     justify-content: center;
     margin: 0.5rem;
     cursor: pointer;
-    padding: 1rem;
     text-align: center;
     
     min-width: 25vw;
-    min-height: 25vh;
+    min-height: 50vh;
+    
+    border-radius: 50%;
+    transition: all 400ms;
+
     
     color: $white-styled;
-    border-radius: 12px;
-    border: 3px solid $dark-gray;
-
-    background-color: $black-styled;
-
-    box-shadow: 
-        inset 5px 5px 10px $dark-gray, 
-        inset -5px -5px 10px $black-styled; 
-
-    h1{
-    background-color: $black-styled;
-
-    }
-    h2{
-    background-color: $black-styled;
-
-    }
-    transition: all 400ms;
-    cursor: pointer;
+    box-shadow: 0px 0px 155px $black-styled inset;
+    border: 10px double $secondary;
     &:hover{
 
         box-shadow: 
         inset 5px 5px 10px $white-styled, 
-        inset -5px -5px 10px $tertiary-low;
     }
+
 
 
 }
@@ -63,43 +48,104 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0.5rem;
-    padding: 1rem;
     justify-content: center;
     align-items: center;
-
 
 }
-.dashboard__camera-card{
+
+
+.dashboard__control-components{
     display: flex;
-    border: 3px solid $dark-gray;
-    margin: 0.5rem;
-
-    padding: 1rem;
-    font-size: 4rem;
-    min-width: 50vw;
-    min-height: 25vh;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    border-radius: 12px;
-    color: $white-styled;
+    align-items: center;
 
-
-    background-color: $black-styled;
-
-    box-shadow: 
-    inset 5px 5px 10px $dark-gray, 
-    inset -5px -5px 10px $black-styled; 
+    margin-top: 2rem;
+    background-color: transparent;
+    padding: 1rem;
+    margin: 0.5rem;
+    padding: 1rem;
     
-    i{
-    background-color: $black-styled;
- 
-    }
+    
+    color: $white-styled;
+    box-shadow: 0px 0px 155px $black-styled inset;
+    border-radius:50%;
+    min-width: 25vw;
+    min-height: 50vh;
+    border: 10px double $secondary;
+
     transition: all 400ms;
     cursor: pointer;
     &:hover{
         box-shadow: 
         inset 5px 5px 10px $white-styled, 
-        inset -5px -5px 10px $tertiary-low;
+    }
+}
+.dashboard__camera-card{
+    display: flex;
+    margin: 0.5rem;
+    
+    padding: 1rem;
+    font-size: 4rem;
+    min-width: 25vw;
+    min-height: 50vh;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: $white-styled;
+    
+    border: 10px double $secondary;
+
+    box-shadow: 0px 0px 155px $black-styled inset;
+
+    transition: all 400ms;
+    cursor: pointer;
+    &:hover{
+        box-shadow: 
+        inset 5px 5px 10px $white-styled, 
+    }
+    
+}
+
+@media (max-width:800px){
+
+    .dashboard__valve-card{
+        padding: 0px;
+        width: 40vw;
+        height: 10vh;
+        margin: 0.2rem;
+    }
+
+    
+    .dashboard__control-components{
+        padding: 0px;
+        width: 40vw;
+        height: 10vh;
+        margin: 0.2rem;
+    }
+    .dashboard__camera-card{
+        padding: 0px;
+        width: 40vw;
+        height: 10vh;
+        margin: 0.2rem;
+
+    }
+
+}
+@media (max-width:600px){
+
+    .dashboard__valve-card{
+        width: 80vw;
+
+    }
+
+    
+    .dashboard__control-components{
+        width: 80vw;
+    }
+    .dashboard__camera-card{
+        width: 80vw;
+
     }
 
 }
