Estilos cambiados, prototipo 4

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,11 @@
-$primary: #33be9f;
-$secondary: #0077b6;
+$primary: #10451d;
+$secondary: #155d27;
+$tertiary: #1a7431;
+$quaternary: #208b3a;
+$pentakill:#b7efc5;
 
-$white-styled:#f0f1f5;
-$dark-gray: #333;
+$white-styled:#f4fff6;
+$light-gray: #f0f0f0;
 $black-gentle: #1b1f2a;
-$black-styled:#0a0a0a;
+$dark-gray: #333;
+
