--- a/src/styles/components/_camera.scss
+++ b/src/styles/components/_camera.scss
@@ -21,8 +21,8 @@
         font-weight: bold;
         background-color: transparent;
         border: none;
-        color: $black-styled;
-        box-shadow: -3px -3px 5px $black-styled inset;
+        color: $black-gentle;
+        box-shadow: -3px -3px 5px $black-gentle inset;
         transition: all 400ms;
         &:hover{
             cursor: pointer;
