--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,19 +9,17 @@ body {
 	height: 100vh;
 	width: 100vw;
 	scroll-behavior: smooth; //Volver smooth al top cuando scrolleamos
-	background-color:$black-gentle;
+	background-color:$light-gray;
 }
 
 main {
 	width: 100%;
 }
 .active {
-	color: greenyellow;
-	text-shadow: 0px 0px 3px greenyellow;
+	color: $pentakill;
 }
 .inactive {
-	color: red;
-	text-shadow: 0px 0px 3px red;
+	color: rgb(255, 174, 0);
 }
 
 //SCROLLBAR
