--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,149 +1,179 @@
-
 .dashboard__container{
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
+    flex-direction: row;
+    margin: 1rem;
+    background-color: $white-styled;
 }
 
-.dashboard__valves{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 1rem;
- 
-}
-.dashboard__valve-card{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0.5rem;
-    cursor: pointer;
-    text-align: center;
-    
-    min-width: 25vw;
-    min-height: 50vh;
-    
-    border-radius: 12px;
-    transition: all 400ms;
-    
-    color: $white-styled;
-    box-shadow: 0px 0px 155px $black-styled inset;
-    border: 10px double $secondary;
-
-    &:hover{
-
-        box-shadow: 
-        inset 0px 0px 10px $white-styled, 
-    }
-
-}
-.dashboard__controls{
+.dashboard__sidebar{
     display: flex;
     flex-wrap: wrap;
-    margin: 0.5rem;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    margin: 1rem;
 
 }
-
-
 .dashboard__control-components{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    margin-top: 2rem;
-    background-color: transparent;
-    padding: 1rem;
-    margin: 0.5rem;
-    padding: 1rem;
-    
-    
-    color: $white-styled;
-    box-shadow: 0px 0px 155px $black-styled inset;
-    border-radius: 12px;
-    min-width: 25vw;
-    min-height: 50vh;
-    border: 10px double $secondary;
-
-    transition: all 400ms;
+    flex-wrap: wrap;
+    flex-direction: row;
+    overflow: hidden;
     cursor: pointer;
+
+    &:nth-child(1){
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: $primary;
+        margin: 0.5rem;
+        padding: 1rem;
+        height: 30vh;
+        width: 20vw;
+        
+        h1{
+            color: $white-styled;
+            font-size: 3ch;
+            justify-content: center;
+            text-align: center;
+            margin-right: 1rem;
+            
+        }
+        div{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            margin-right: 1rem;
+            margin-top: 1rem;
+        }
+        span{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            color: $white-styled;
+            font-size: 3ch;            
+        }
+
+    }
+
+    &:nth-child(2){
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $secondary;
+        margin: 0.5rem;
+        padding: 1rem;
+        height: 10vh;
+        width: 20vw;
+        h1{
+            margin-right: 1rem;
+            color: $white-styled;
+            font-size: 3ch;
+        }
+        h2{
+            margin-left: 1rem;
+            font-size: 3ch;       
+        }
+    }
+    
+    &:nth-child(3){
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $tertiary;
+        margin: 0.5rem;
+        padding: 1rem;
+        height: 10vh;
+        width: 20vw;
+        h1{
+            margin-right: 1rem;
+            color: $white-styled;
+            font-size: 3ch;
+        }
+        h2{
+            margin-left: 2.5rem;
+            font-size: 3ch;       
+        }
+    }
+    &:nth-child(4){
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $quaternary;
+        margin: 0.5rem;
+        padding: 1rem;
+        height: 10vh;
+        width: 20vw;
+        h1{
+            margin-right: 1rem;
+            color: $white-styled;
+            font-size: 3ch;
+        }
+        i{
+            margin-left: 2rem;
+            font-size: 3ch; 
+            color: $white-styled;      
+        }
+    }
+    transition: 400ms;
     &:hover{
-        box-shadow: 
-        inset 0px 0px 10px $white-styled, 
+        box-shadow: 0px 0px 20px $white-styled inset;
     }
 }
-.dashboard__camera-card{
+.dashboard__valves{
     display: flex;
-    margin: 0.5rem;
-    
-    padding: 1rem;
-    font-size: 4rem;
-    min-width: 25vw;
-    min-height: 50vh;
-    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin: 1rem;
+    margin-left: -1rem;
+}
+
+.dashboard__valve-card{
+    display: flex;
     justify-content: center;
-    border-radius: 12px;
-    color: $white-styled;
-    
-    border: 10px double $secondary;
-
-    box-shadow: 0px 0px 155px $black-styled inset;
-
-    transition: all 400ms;
-    cursor: pointer;
-    &:hover{
-        box-shadow: 
-        inset 0px 0px 10px $white-styled, 
+    align-items: center;
+    margin: 0.5rem;
+    padding: 1rem;
+    height: 20vh;
+    width: 80vw;
+    &:nth-child(1){
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: $primary;
+        margin-top: 1rem;
+        h1{
+            color: $pentakill;
+        }
+        i{
+            margin-left: 2rem;
+        }
     }
-    
-}
-
-@media (max-width:800px){
-
-    .dashboard__valve-card{
-        padding: 0px;
-        width: 40vw;
-        height: 10vh;
-        margin: 0.2rem;
+    &:nth-child(2){
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: $primary;
+        margin-top: 1rem;
+        h1{
+            color: $pentakill;
+        }
+        i{
+            margin-left: 2rem;
+        }
     }
-
-    
-    .dashboard__control-components{
-        padding: 0px;
-        width: 40vw;
-        height: 10vh;
-        margin: 0.2rem;
+    &:nth-child(3){
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: $primary;
+        margin-top: 2rem;
+        h1{
+            color: $pentakill;
+        }
+        i{
+            margin-left: 2rem;
+        }
     }
-    .dashboard__camera-card{
-        padding: 0px;
-        width: 40vw;
-        height: 10vh;
-        margin: 0.2rem;
-
-    }
-
-}
-@media (max-width:600px){
-
-    .dashboard__valve-card{
-        width: 80vw;
-
-    }
-
-    
-    .dashboard__control-components{
-        width: 80vw;
-    }
-    .dashboard__camera-card{
-        width: 80vw;
-
-    }
-
 }
