--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,5 @@
 @import './base/settings';
 @import './base/base';
 @import './components/dashboard';
-@import './components/ev-programmer';
-@import './components/control';
 @import './components/camera';
+@import './components/valves';
