Rediseño prototipo 5 + charts

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -16,7 +16,7 @@ main {
 	width: 100%;
 }
 .active {
-	color: $pentakill !important;
+	color: rgb(0, 204, 255) !important;
 }
 .inactive {
 	color: rgb(255, 174, 0) !important;
