--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,7 +5,7 @@ $quaternary: #208b3a;
 $pentakill:#b7efc5;
 
 $white-styled:#f4fff6;
-$light-gray: #f0f0f0;
+$light-gray: #eff1f0;
 $black-gentle: #1b1f2a;
 $dark-gray: #333;
 
