--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,23 +1,29 @@
 .dashboard__container{
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     margin: 1rem;
-    background-color: $white-styled;
+    background-color:$light-gray;
 }
 
 .dashboard__sidebar{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    margin: 1rem;
+    justify-content: center;
+    align-items: center;
+
+    width: 30%;
 
 }
 .dashboard__control-components{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
     cursor: pointer;
+    width: 100%;
 
     &:nth-child(1){
         display: flex;
@@ -27,8 +33,7 @@
         background-color: $primary;
         margin: 0.5rem;
         padding: 1rem;
-        height: 30vh;
-        width: 20vw;
+        height: 20vh;
         
         h1{
             color: $white-styled;
@@ -59,52 +64,56 @@
 
     &:nth-child(2){
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+
         background-color: $secondary;
         margin: 0.5rem;
         padding: 1rem;
-        height: 10vh;
-        width: 20vw;
+
         h1{
-            margin-right: 1rem;
+
             color: $white-styled;
             font-size: 3ch;
+            margin-right: 1rem;
+            margin-bottom: 1rem;
+
         }
-        h2{
-            margin-left: 1rem;
-            font-size: 3ch;       
+        svg{
+            margin-right: 1rem !important;
         }
+
+
     }
     
     &:nth-child(3){
         display: flex;
+        flex-direction: column;
+        background-color: $tertiary;
         justify-content: center;
         align-items: center;
-        background-color: $tertiary;
-        margin: 0.5rem;
+        text-align: center;
         padding: 1rem;
-        height: 10vh;
-        width: 20vw;
+        height: 20vh;
         h1{
-            margin-right: 1rem;
             color: $white-styled;
             font-size: 3ch;
+            margin-right: 1rem;
         }
         h2{
-            margin-left: 2.5rem;
-            font-size: 3ch;       
+            padding: 1.5rem;
+            font-size: 3ch;    
+            margin-right: 1rem;
+
         }
     }
     &:nth-child(4){
         display: flex;
-        justify-content: center;
-        align-items: center;
+
+        
         background-color: $quaternary;
         margin: 0.5rem;
         padding: 1rem;
         height: 10vh;
-        width: 20vw;
         h1{
             margin-right: 1rem;
             color: $white-styled;
@@ -121,80 +130,64 @@
         box-shadow: 0px 0px 20px $white-styled inset;
     }
 }
-.dashboard__valves{
+.CircularProgressbar{
+
+    width: 100px !important;
+    position:static !important;
+}
+.dashboard__content{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    margin: 1rem;
-    margin-left: -1rem;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 70%;
+}
+.dashboard__valves{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
 }
 
 .dashboard__valve-card{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
     margin: 0.5rem;
     padding: 1rem;
-    height: 20vh;
-    width: 80vw;
-    &:nth-child(1){
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        background-color: $primary;
-        margin-top: 1rem;
+    height: 40vh;
+    width: 100%;
+    background-color: $white-styled;
+
         h1{
-            color: $pentakill;
+            color: $primary;
+            font-size: 2ch;
         }
         i{
-            margin-left: 2rem;
+            font-size: 2ch;
+            margin-left: 10rem;
         }
     }
-    &:nth-child(2){
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        background-color: $primary;
-        margin-top: 1rem;
-        h1{
-            color: $pentakill;
-        }
-        i{
-            margin-left: 2rem;
-        }
-    }
-    &:nth-child(3){
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        background-color: $primary;
-        margin-top: 2rem;
-        h1{
-            color: $pentakill;
-        }
-        i{
-            margin-left: 2rem;
-        }
-    }
-}
-.dashboard__valve-status{
+
+
+.dashboard__charts{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    width: 50vw;
-    margin-left: 3rem;
-    span{
-        border: 1px solid $pentakill;
-        border-radius: 6px;
-        margin: 0.1rem;
-        padding: 0.5rem;
-        color: $pentakill;
-        cursor: pointer;
-        transition: all 400ms;
-        &:hover{
-            box-shadow: 0px 0px 15px $light-gray inset;
-        }
+    
+    padding: 1rem;
+    margin: 0.5rem;
+    width: 95%;
+    background-color: $white-styled;
+    margin-top: 3rem;
+    div{
+        height: 100%;
+
     }
+    
 }
