--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -25,6 +25,15 @@ main {
 	background-color: $quaternary !important;
 	box-shadow: 0px 0px 2px $pentakill inset  !important;
 }
+.invalid{
+	box-shadow: 0px 0px 10px red;
+	border-radius: 50%;
+	padding: 1rem;
+}
+//SweetAler
+.swal2-icon{
+	overflow: hidden !important;
+}
 //SCROLLBAR
 
 
@@ -32,23 +41,22 @@ main {
 ::-webkit-scrollbar {
 
 	width: 10px;
-	border: 1px solid black;
+	border: 4px solid $primary;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background: #848486;
+	background: $pentakill;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: darken($color: $secondary, $amount: 20);
-	transition: all 300ms;
+	background: $primary;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: $secondary;
+	background: $tertiary;
 }
 
 
