--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -154,26 +154,57 @@
 
 .dashboard__valve-card{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     margin: 0.5rem;
-    padding: 1rem;
     height: 50vh;
-    width: 100%;
+    width: 30vw;
     background-color: $white-styled;
 
-        h1{
-            color: $primary;
-            font-size: 2ch;
+    }
+.dashboard__valve-card-topbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid $quaternary;
+    width: 100%;
+    min-height: 30%;
+    background-color: $white-styled;
+    h1{
+        color: $primary;
+        font-size: 3ch;
+        margin: 1rem;
+        user-select: none;
+    }
+    i{
+        font-size: 2ch;
+        margin: 1rem;
+        cursor: pointer;
+        transition: all 400ms;
+        &:hover{
+            transform: scale(1.1);
         }
-        i{
-            font-size: 2ch;
-            margin-left: 10rem;
+    }
+}
+.dashboard__timer-section{
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    i{
+        align-self: flex-end;
+        justify-self: flex-end;
+        transition: all 400ms;
+        cursor: pointer;
+        &:hover{
+            transform: scale(1.1);
         }
     }
 
-
+}
+    
 .dashboard__charts{
     display: flex;
     flex-direction: row;
