--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -193,7 +193,9 @@
     display: flex;
     flex-direction: column;
     padding: 0.5rem;
-    i{
+    i{  
+        position: relative;
+        top: 15px;
         align-self: flex-end;
         justify-self: flex-end;
         transition: all 400ms;
