--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,6 @@
 @import './components/dashboard';
 @import './components/camera';
 @import './components/valves';
+@import './components/reloj';
+@import './components/temperatura';
+@import './components/humedad';
