--- a/src/styles/components/_camera.scss
+++ b/src/styles/components/_camera.scss
@@ -1,35 +1,42 @@
 .camera__container{
     display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    background-color: $pentakill;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    width: 90vw;
+    border-radius: 6px;
+    box-shadow: 0px 0px 5px $pentakill;
+    padding: 1rem;
+    img{
+        width: 100%;
+        height: 50vh;
+        object-fit: cover;
+        border-radius: 6px;
+        box-shadow: 0px 2px 2px $pentakill;
+    }
+}
+.camera__content{
+    display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
     overflow: hidden;
-
-}
-
-.camera__screen{
-    object-fit: contain;
-    
-    
-}
-.camera__button{
-    position:relative;
-    left: 35vw;
-
-    button{
-        outline: none;
-        border-radius: 12px;
-        padding: 1rem;
-        font-weight: bold;
-        background-color: transparent;
-        border: none;
-        color: $black-gentle;
-        box-shadow: -3px -3px 5px $black-gentle inset;
+    i{
+        color: $primary;
+        font-size: 4ch;
+        align-self: flex-start;
+        opacity: 0.8;   
+        margin-right: 2.3rem;
+        margin-bottom: 1rem;
+        cursor: pointer;
+        overflow: hidden;
         transition: all 400ms;
         &:hover{
-            cursor: pointer;
-            box-shadow: -3px -3px 5px $primary inset;
-            color: $primary;
-
-
+            transform: scale(1.1);
         }
     }
 }
