--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -1,8 +1,10 @@
 .dashboard__container{
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     margin: 1rem;
     background-color:$light-gray;
+
 }
 
 .dashboard__sidebar{
@@ -11,137 +13,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     width: 30%;
 
-}
-.dashboard__control-components{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    cursor: pointer;
-    width: 100%;
-
-    &:nth-child(1){
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: $primary;
-        margin: 0.5rem;
-        padding: 1rem;
-        height: 20vh;
-        
-        h1{
-            color: $white-styled;
-            font-size: 3ch;
-            justify-content: center;
-            text-align: center;
-            margin-right: 1rem;
-            
-        }
-        div{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            margin-right: 1rem;
-            margin-top: 1rem;
-        }
-        span{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            color: $white-styled;
-            font-size: 3ch;            
-        }
-
-    }
-
-    &:nth-child(2){
-        display: flex;
-        flex-direction: column;
-
-        background-color: $secondary;
-        margin: 0.5rem;
-        padding: 1rem;
-
-        h1{
-
-            color: $white-styled;
-            font-size: 3ch;
-            margin-right: 1rem;
-            margin-bottom: 1rem;
-
-        }
-        svg{
-            margin-right: 1rem !important;
-        }
-
-
-    }
-    
-    &:nth-child(3){
-        display: flex;
-        flex-direction: column;
-        background-color: $tertiary;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 1rem;
-        height: 20vh;
-        h1{
-            color: $white-styled;
-            font-size: 3ch;
-            margin-right: 1rem;
-        }
-        h2{
-            padding: 1.5rem;
-            font-size: 3ch;    
-            margin-right: 1rem;
-
-        }
-    }
-    &:nth-child(4){
-        display: flex;
-
-        
-        background-color: $quaternary;
-        margin: 0.5rem;
-        padding: 1rem;
-        height: 10vh;
-        h1{
-            margin-right: 1rem;
-            color: $white-styled;
-            font-size: 3ch;
-        }
-        i{
-            margin-left: 2rem;
-            font-size: 3ch; 
-            color: $white-styled;      
-        }
-    }
-    transition: 400ms;
-    &:hover{
-        box-shadow: 0px 0px 20px $white-styled inset;
-    }
-}
-.CircularProgressbar{
-
-    width: 100px !important;
-    position:static !important;
-}
-.dashboard__content{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 70%;
 }
 .dashboard__valves{
     display: flex;
@@ -149,78 +22,18 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    width: 100%;
+    width: 90vw;
+    border-radius: 6px;    
 }
-
-.dashboard__valve-card{
+.dashboard__control-components{
     display: flex;
     flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0.5rem;
-    height: 50vh;
-    width: 30vw;
-    background-color: $white-styled;
-
-    }
-.dashboard__valve-card-topbar{
-    display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid $quaternary;
-    width: 100%;
-    min-height: 30%;
-    background-color: $white-styled;
-    h1{
-        color: $primary;
-        font-size: 3ch;
-        margin: 1rem;
-        user-select: none;
-    }
-    i{
-        font-size: 2ch;
-        margin: 1rem;
-        cursor: pointer;
-        transition: all 400ms;
-        &:hover{
-            transform: scale(1.1);
-        }
-    }
+    align-items: flex-start;
+    width: 90vw;
+    border-radius: 6px;    
 }
-.dashboard__timer-section{
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-    i{  
-        position: relative;
-        top: 15px;
-        align-self: flex-end;
-        justify-self: flex-end;
-        transition: all 400ms;
-        cursor: pointer;
-        &:hover{
-            transform: scale(1.1);
-        }
-    }
 
-}
-    
-.dashboard__charts{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    
-    padding: 1rem;
-    margin: 0.5rem;
-    width: 95%;
-    background-color: $white-styled;
-    margin-top: 3rem;
-    div{
-        height: 100%;
 
-    }
     
-}
