--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -16,7 +16,7 @@ main {
 	width: 100%;
 }
 .active {
-	color: rgb(0, 204, 255) !important;
+	color: $tertiary !important;
 }
 .inactive {
 	color: red!important;
