--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,9 +1,26 @@
-$primary: #10451d;
-$secondary: #155d27;
-$tertiary: #1a7431;
-$quaternary: #208b3a;
-$pentakill:#b7efc5;
+//TERRACOTA DESERT
+// $primary: #03071e;
+// $secondary: #6a040f ;
+// $tertiary: #d00000;
+// $quaternary: #e85d04;
+// $pentakill:#ffba08;
 
+//BLUE SKY
+$primary: #03045e;
+$secondary:#caf0f8;
+$tertiary: #00b4d8;
+$quaternary: #90e0ef;
+$pentakill: #0077b6 ;
+
+//GREEN LAND
+// $primary: #10451d;
+// $secondary: #155d27;
+// $tertiary: #1a7431;
+// $quaternary: #208b3a;
+// $pentakill:#b7efc5;
+
+
+//GENERIC
 $white-styled:#f4fff6;
 $light-gray: #eff1f0;
 $black-gentle: #1b1f2a;
