--- a/src/styles/components/_camera.scss
+++ b/src/styles/components/_camera.scss
@@ -8,7 +8,7 @@
     text-align: center;
     width: 90vw;
     border-radius: 6px;
-    box-shadow: 0px 0px 5px $pentakill;
+    box-shadow: 0px 2px 5px $dark-gray;
     padding: 1rem;
     img{
         width: 100%;
@@ -28,7 +28,6 @@
     i{
         color: $primary;
         font-size: 4ch;
-        align-self: flex-start;
         opacity: 0.8;   
         margin-right: 2.3rem;
         margin-bottom: 1rem;
