--- a/src/styles/components/_humedad.scss
+++ b/src/styles/components/_humedad.scss
@@ -1,14 +1,13 @@
 .humedad__container{
     display: flex;
     flex-direction: column;
-    margin: 1rem;
+    margin: 0.5rem;
     background-color: $pentakill;
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    width: 30vw;
     border-radius: 6px;
-    box-shadow: 0px 0px 5px $pentakill;
+    box-shadow: 0px 2px 5px $dark-gray;
 }
 .humedad__content{
     display: flex;
@@ -27,8 +26,9 @@
 }
 
 .CircularProgressbar{
-    width: 16% !important;
+    width: 11% !important;
     position:static !important;
+    opacity: 0.8 !important;
 }
 .humedad__chart{
     display: flex;
@@ -36,8 +36,6 @@
     justify-content: center;
     align-items: center;
     background-color: $white-styled;
-    div{
-        height: 100%;
-    }
-    
+    padding: 2rem;
+
 }
