--- a/src/styles/components/_reloj.scss
+++ b/src/styles/components/_reloj.scss
@@ -5,16 +5,15 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: $light-gray;
+    background-color: transparent;
     margin: 0.5rem;
     padding: 1rem;
     height: 1vh;
-    box-shadow: 0px 0px 5px $pentakill;
     border-radius: 6px;
     
     h1{
-        color: $quaternary;
-        font-size: 2ch;
+        color: $primary;
+        font-size: 2.5ch;
         margin-right: 1rem;
         justify-self: flex-start;
         opacity: 0.6;         
@@ -24,7 +23,7 @@
     div{
         display: flex;
         justify-self: flex-end;
-        font-size: 1ch;
+        font-size: 1.4ch;
         padding: 0.1rem;
         margin-right: 2rem;
 
@@ -34,7 +33,7 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        color: $quaternary;
+        color: $primary;
         font-size: 3ch;
         font-weight: bold;   
         opacity: 0.6;         
