--- a/src/styles/components/_temperatura.scss
+++ b/src/styles/components/_temperatura.scss
@@ -1,14 +1,13 @@
 .temperatura__container{
     display: flex;
     flex-direction: column;
-    margin: 1rem;
+    margin: 0.5rem;
     background-color: $pentakill;
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    width: 30vw;
     border-radius: 6px;
-    box-shadow: 0px 0px 5px $pentakill;
+    box-shadow: 0px 2px 5px $dark-gray;
 }
 .temperatura__content{
     display: flex;
@@ -21,13 +20,14 @@
         color: $black-gentle;
         font-size: 4ch;
         align-self: flex-start;
-        opacity: 0.8;   
+        opacity: 0.7;   
     }
     h2{
+        color: $white-styled;
         font-size: 3ch; 
-        opacity: 0.6;   
-        filter: blur(0.9);
+        opacity: 0.7;   
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        border-bottom: 1px solid $white-styled;
     }
 }
 .temperatura__chart{
@@ -36,8 +36,6 @@
     justify-content: center;
     align-items: center;
     background-color: $white-styled;
-    div{
-        height: 100%;
-    }
+    padding: 2rem;
     
 }
