--- a/src/styles/components/_valves.scss
+++ b/src/styles/components/_valves.scss
@@ -11,7 +11,7 @@
     width: 30vw;
     background-color: $white-styled;
     border-radius: 6px;
-    box-shadow: 0px 2px 5px $pentakill;
+    box-shadow: 0px 2px 5px $dark-gray;
 
     }
 .valves__valve-card-topbar{
@@ -44,12 +44,15 @@
     flex-direction: column;
     padding: 0.5rem;
     i{  
+        color: $light-gray;  
+        top: 25px;  
+        right: 15px;
         position: relative;
-        top: 15px;
         align-self: flex-end;
         justify-self: flex-end;
         transition: all 400ms;
         cursor: pointer;
+        // color: $light-gray;
         &:hover{
             transform: scale(1.1);
         }
@@ -75,15 +78,16 @@
     section{
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
     }
     label{
         
-        font-weight: bold;
+        font-style: oblique;
         margin: 1rem;
         padding: 0.5rem;
         width: 100%;
         margin-right: 2rem;
+        color: $light-gray;
         &:nth-child(1){
             margin-right: 2rem;
         }
