Retoques CSS - TODO => RESPONSIVE

--- a/src/styles/components/_camera.scss
+++ b/src/styles/components/_camera.scss
@@ -26,9 +26,9 @@
     width: 100%;
     overflow: hidden;
     i{
-        color: $primary;
+        color: $light-gray;
         font-size: 4ch;
-        opacity: 0.8;   
+        opacity: 0.7;   
         margin-right: 2.3rem;
         margin-bottom: 1rem;
         cursor: pointer;
