--- a/src/styles/components/_dashboard.scss
+++ b/src/styles/components/_dashboard.scss
@@ -29,5 +29,53 @@
     border-radius: 6px;    
 }
 
+@media(max-width: 850px){
+    .dashboard__container{
+        margin: 0px;
+        padding: 0rem;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .dashboard__valves{
+        flex-direction: column;
+        margin-bottom: 1rem;
+    }
+    .dashboard__control-components{
+        flex-direction: column;
 
-    
+        width: 100vw;
+        margin: 0px;
+        padding: 0px;
+    }
+}
+@media(max-width: 580px){
+
+    .dashboard__valves{
+        width: 100vw;  
+        margin: 0rem; 
+        padding: 0rem; 
+ 
+    }
+    .dashboard__control-components{
+        flex-direction: column;
+        width: 100vw;
+        margin: 0px;
+        padding: 0px;
+
+    }
+    .dashboard__camera{
+        position: relative;
+        margin: 0px;
+        margin-right: auto;
+        
+        padding: 0px;
+        padding-right: 2rem;
+    }
+    .dashboard__reloj{
+        margin: 0px;
+        padding: 0px;
+
+    }
+}
+
