--- a/src/styles/components/_temperatura.scss
+++ b/src/styles/components/_temperatura.scss
@@ -9,15 +9,16 @@
     border-radius: 6px;
     box-shadow: 0px 2px 5px $dark-gray;
     width: 45vw;
-
+    height: 45vh;
 }
 .temperatura__content{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 100%;
-    height: 10vh;
+    width: 100vw;
+    height: 15%;
+    padding: 1rem;
     i{
         color: $black-gentle;
         font-size: 4ch;
@@ -38,5 +39,24 @@
     align-items: center;
     background-color: $white-styled;
     padding: 2rem;
+    width: 100%;
+    height: 70%;
     
+}
+@media(max-width: 850px){
+    .temperatura__container{
+        margin: 0rem;
+        padding: 0rem;
+        width: 100vw;
+        height: 50vh;
+        margin-bottom: 1rem;
+    }
+    .temperatura__content{
+        width: 100vw;
+        padding: 0rem;
+        height: 30%;
+    }
+    .temperatura__chart{
+        width: 100%;
+    }
 }
