--- a/src/styles/components/_valves.scss
+++ b/src/styles/components/_valves.scss
@@ -22,7 +22,13 @@
     width: 100%;
     min-height: 30%;
     background-color: $white-styled;
-    border-bottom: 4px double $pentakill;
+    box-shadow: 0px 0px 30px $secondary inset;
+    border-bottom: 2px solid $pentakill;
+    transition: all 1000ms;
+    &:hover{
+        box-shadow: 0px 0px 5px $secondary inset;
+
+    }
     h1{
         color: $primary;
         font-size: 3ch;
@@ -118,9 +124,36 @@
 
 .valves__selectors{
     div{
-
-    &:nth-child(2){
-        margin-left: 3.5rem;
+        color: $white-styled;
+        &:nth-child(2){
+            margin-left: 3.5rem;
+        }
     }
+}
+
+@media(max-width: 850px){
+    .valves__valve-card{
+        margin: 0px;
+        margin-bottom: 1rem;
+    }
+    .valves__time-form{
+        width: 80vw;
+    }
+}
+
+@media(max-width: 580px){
+
+    .valves__valve-card{
+
+        height: 100vh;
+
+    }
+    .valves__timer-section{
+        i{
+            color: $black-gentle;
+            font-size: 3ch;
+            right: 50px;
+        }
+        
     }
 }
