--- a/src/styles/components/_humedad.scss
+++ b/src/styles/components/_humedad.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     width: 100%;
     height: 22%;
     padding: 0.5rem;
@@ -24,7 +24,7 @@
         color: $black-gentle;
         font-size: 4ch;
         opacity: 0.8;   
-
+        margin-right: 10rem;
     }
 }
 
