--- a/src/styles/components/_temperatura.scss
+++ b/src/styles/components/_temperatura.scss
@@ -14,7 +14,7 @@
 .temperatura__content{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     width: 100vw;
     height: 15%;
@@ -22,7 +22,9 @@
     i{
         color: $black-gentle;
         font-size: 4ch;
-        opacity: 0.7;   
+        opacity: 0.7;  
+        margin-right: 10rem;
+         
     }
     h2{
         color: $white-styled;
